vamo ver se agora foi

--- a/estilo.css
+++ b/estilo.css
@@ -337,6 +337,10 @@ footer .line-footer .logo-footer img{
 @media screen and (max-width: 1020px){
 
     /* CLASSES GERAIS */
+    .body{
+        overflow-x: hidden;
+    }
+
     .flex{
         flex-direction: column;
     }
