--- a/estilo.css
+++ b/estilo.css
@@ -16,7 +16,7 @@ body{
 /*Com estes parâmetros , o texto ficará centralizado tanto horizontalmente quanto verticalmente*/
 .interface{
     max-width: 1280px;
-    margin: 0 auto;
+
 }
 
 .flex{
@@ -58,7 +58,7 @@ header a{
     text-decoration: none;
     display: inline-block;
     transition: .1s;
-    /* margin: 0 10%; */
+    margin: 0 10%;
     font-size: 22px;
 }
 
